--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,4 @@
+@import "./partials/medias-Q";
 @import "./partials/variables";
 @import "./partials/reset";
 @import "./partials/navegador";
@@ -7,5 +8,8 @@
 @import "./partials/chatayuda";
 @import "./partials/empleo";
 @import "./partials/historia";
+@import "./partials/producto";
+
+
 
 
