--- a/scss/partials/_chatayuda.scss
+++ b/scss/partials/_chatayuda.scss
@@ -1,7 +1,7 @@
 .chat-ayuda {
     display: flex;
     justify-content: end;
-    @media (min-width: 550px){
+   @include destock{
         
         // margin-top: 50px;
     }
@@ -11,7 +11,7 @@
         height: auto;
         margin-bottom: 40px;
         
-        @media (min-width: 550px){
+       @include destock{
             margin-top: -30px;
             margin-right: 40px;
             
