--- a/scss/partials/_historia.scss
+++ b/scss/partials/_historia.scss
@@ -11,7 +11,7 @@
             flex-direction: column;
             justify-content: center;
 
-            @media (min-width: 550px){
+           @include destock{
                 font-size: 80px;
                 display: flex;
             }
@@ -26,7 +26,7 @@
         font-size: 15px;
         text-align: center;
 
-        @media (min-width: 550px) {
+       @include destock {
             
             padding-top: 10px;
             font-size: 16px;
@@ -40,7 +40,7 @@
             color: $colorturquesaoscuro;
             font-weight: 600;
 
-            @media (min-width: 550px) {
+           @include destock {
                 font-size: 20px;
                 font-weight: 600;
                 padding-top: 40px;
@@ -53,7 +53,7 @@
 .contenedor {
     display: block;
 
-    @media (min-width: 550px) {
+   @include destock {
         display: flex;
         align-items: center;
 
@@ -65,7 +65,7 @@
         &-foto {
             display: block;
 
-            @media (min-width: 550px) {
+           @include destock {
                 display: flex;
                 justify-content: space-between;
                 padding: 0 40px;
@@ -83,7 +83,7 @@
                 margin-left: 40px;
                 padding-bottom: 10px;
 
-                @media (min-width: 550px) {
+               @include destock {
                     width: 100%;
                     height: auto;
                     padding: 0 10px;
