--- a/scss/partials/_producto.scss
+++ b/scss/partials/_producto.scss
@@ -1,9 +1,5 @@
-.contenedor-producto {
-    &-tarjeta {
-        .imagen-producto {
-            width: 50%;
-            height: auto;
-            border-radius: 30px;
-        }
-    }
+.info{
+display: flex;
+justify-content: center;
+
 }
