--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -8,7 +8,7 @@
 @import "./partials/chatayuda";
 @import "./partials/empleo";
 @import "./partials/historia";
-@import "./partials/producto";
+@import "./partials/info-producto";
 
 
 
