--- a/scss/partials/_navegador.scss
+++ b/scss/partials/_navegador.scss
@@ -1,7 +1,6 @@
 .navegador {
     background-color: $colorazul;
     display: block;
-    padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 20px;
 
@@ -36,6 +35,7 @@
 
         img {
             width: 35px;
+            margin-left:12px ;
         }
     }
 
