--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -11,7 +11,6 @@
 .navegador {
   background-color: #2A3040;
   display: block;
-  padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 20px;
 }
@@ -46,6 +45,7 @@
 }
 .navegador-menu img {
   width: 35px;
+  margin-left: 12px;
 }
 @media (min-width: 550px) {
   .navegador-ul {
@@ -277,8 +277,18 @@
 .banner-rebajas h6 {
   text-transform: uppercase;
   font-weight: 400;
+  font-size: 12px;
+  text-align: center;
   background-color: transparent;
   color: #EAEBEB;
+}
+@media (min-width: 550px) {
+  .banner-rebajas h6 {
+    text-transform: uppercase;
+    font-weight: 400;
+    background-color: transparent;
+    color: #EAEBEB;
+  }
 }
 
 .contenedor-tarjetamaestra {
@@ -943,6 +953,7 @@ footer .columna2-iconos-pago img {
 .producto {
   display: block;
   flex-direction: column;
+  margin-right: 20px;
 }
 @media (min-width: 550px) {
   .producto {
@@ -950,21 +961,26 @@ footer .columna2-iconos-pago img {
     flex-direction: row;
     margin-top: 80px;
     max-height: 500px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
+}
+.producto-carrusel .carousel-item {
+  transition-duration: 1s;
 }
 .producto-img-carrusel {
   border-radius: 10px;
   display: block;
   max-width: 100%;
-  padding-right: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 95%;
 }
 @media (min-width: 550px) {
   .producto-img-carrusel {
     border-radius: 10px;
     width: auto;
-    height: 500px;
-    padding-right: 0;
+    height: 450px;
+    margin: 0;
   }
 }
 .producto-info {
@@ -973,19 +989,19 @@ footer .columna2-iconos-pago img {
   border-radius: 10px;
   max-width: -moz-fit-content;
   max-width: fit-content;
-  margin: 0 14px 30px 0;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  margin: 0;
 }
 @media (min-width: 550px) {
   .producto-info {
     border: solid #3F525A;
     border-width: 0.1px;
     border-radius: 10px;
-    margin: 0 auto auto 0;
   }
 }
 .producto-info h2 {
   padding-top: 26px;
-  margin-top: 20px;
   text-align: center;
   color: #2A3040;
   font-weight: 600;
@@ -997,10 +1013,12 @@ footer .columna2-iconos-pago img {
 @media (min-width: 550px) {
   .producto-info p {
     font-size: 14px;
+    margin: 30px 0 30px 0;
   }
 }
 .producto-info .form-select {
   font-size: 12px;
+  margin: 30px 0 30px 0;
 }
 .producto-info-cantidad {
   display: flex;
