--- a/scss/partials/_info-producto.scss
+++ b/scss/partials/_info-producto.scss
@@ -1,37 +1,36 @@
 .producto {
     display: block;
     flex-direction: column;
+    margin-right: 20px;
 
     @include destock {
         display: flex;
         flex-direction: row;
         margin-top: 80px;
         max-height: 500px;
-        margin-bottom: 50px;
+        margin-bottom: 30px;
+       
     }
 
     &-carrusel {
-        // margin-top: 30px;
-        // margin-bottom: 30px;
-
-        @include destock {
-            // margin: 0 40px;
+        .carousel-item {
+            transition-duration: 1s;
         }
-
     }
 
     &-img-carrusel {
         border-radius: 10px;
-        // max-height: fit-content;
         display: block;
         max-width: 100%;
-        padding-right: 10px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        width: 95%;
 
         @include destock {
             border-radius: 10px;
             width: auto;
-            height: 500px;
-            padding-right: 0;
+            height: 450px;
+            margin: 0;
         }
     }
 
@@ -40,18 +39,18 @@
         border-width: 0.1px;
         border-radius: 10px;
         max-width: fit-content;
-        margin: 0 14px 30px 0;
+        margin-top: 30px;
+        margin-bottom: 40px;
+        margin: 0;
 
         @include destock {
             border: solid $colorturquesaoscuro;
             border-width: 0.1px;
             border-radius: 10px;
-            margin: 0 auto auto 0;
         }
 
         h2 {
             padding-top: 26px;
-            margin-top: 20px;
             text-align: center;
             color: $colorazul;
             font-weight: 600;
@@ -63,12 +62,14 @@
 
             @include destock {
                 font-size: 14px;
+                margin: 30px 0 30px 0;
             }
 
         }
 
         .form-select {
             font-size: 12px;
+            margin: 30px 0 30px 0;
         }
 
         &-cantidad {
