detalles de alineacion en index

--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -267,6 +267,7 @@
   align-items: center;
   width: 100%;
   background-color: #F06B5F;
+  height: 40px;
   padding-top: 9px;
 }
 @media (min-width: 550px) {
@@ -288,6 +289,7 @@
     font-weight: 400;
     background-color: transparent;
     color: #EAEBEB;
+    font-size: 18px;
   }
 }
 
@@ -361,7 +363,12 @@
   max-width: 89%;
   display: block;
   border-bottom: #3F525A 0.75px solid;
-  padding: 30px 0;
+  padding-top: 30px;
+}
+@media (min-width: 550px) {
+  .tarjeta-producto {
+    padding: 30px 0;
+  }
 }
 .tarjeta-producto-imagen img {
   height: auto;
@@ -369,6 +376,7 @@
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 10px;
+  margin-bottom: 8px;
 }
 .tarjeta-producto-titulo {
   padding-top: 10px;
@@ -376,7 +384,7 @@
   font-size: 20px;
   font-weight: 600;
   line-height: 20px;
-  padding-bottom: 16px;
+  padding-bottom: 8px;
 }
 .tarjeta-producto-texto {
   font-size: 12px;
@@ -392,7 +400,7 @@
   .tarjeta-producto-texto {
     font-size: 14px;
     font-weight: 500;
-    margin-top: -13px;
+    margin-top: 2px;
   }
 }
 .tarjeta-producto-texto-origen {
@@ -408,20 +416,36 @@
   font-size: 16px;
   color: #F06B5F;
 }
+.tarjeta-producto .estrellas {
+  margin-left: -5px;
+}
 .tarjeta-producto .texto-tarjeta-precio {
   color: #F06B5F;
   font-weight: 700;
   margin-top: -1px;
-  font-size: 20px;
+  font-size: 18px;
+}
+@media (min-width: 550px) {
+  .tarjeta-producto .texto-tarjeta-precio {
+    color: #F06B5F;
+    font-weight: 700;
+    margin-top: -1px;
+    font-size: 20px;
+  }
+}
+.tarjeta-producto .texto-tarjeta-iva {
+  font-size: 12px;
 }
 .tarjeta-producto .botonchip-compra {
   display: flex;
   justify-content: flex-end;
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 @media (min-width: 550px) {
   .tarjeta-producto .botonchip-compra {
     padding-top: 10px;
+    margin-bottom: 0;
   }
 }
 .tarjeta-producto .botonchip-compra-icono {
@@ -528,6 +552,11 @@
   }
 }
 
+.titulo-principal-tarjeta-clase {
+  font-size: 15px;
+  margin-bottom: 0;
+}
+
 footer {
   background-color: #2A3040;
   width: 100%;
@@ -599,6 +628,12 @@ footer .columna2-iconos-pago img {
 .chat-ayuda {
   display: flex;
   justify-content: end;
+  margin-right: 20px;
+}
+@media (min-width: 550px) {
+  .chat-ayuda {
+    margin-top: 20px;
+  }
 }
 .chat-ayuda img {
   width: 200px;
@@ -953,7 +988,6 @@ footer .columna2-iconos-pago img {
 .producto {
   display: block;
   flex-direction: column;
-  margin-right: 20px;
 }
 @media (min-width: 550px) {
   .producto {
