--- a/scss/partials/_chatayuda.scss
+++ b/scss/partials/_chatayuda.scss
@@ -1,9 +1,10 @@
 .chat-ayuda {
     display: flex;
     justify-content: end;
+    margin-right: 20px;
+
    @include destock{
-        
-        // margin-top: 50px;
+        margin-top: 20px;
     }
 
     img{
