--- a/scss/partials/_chatayuda.scss
+++ b/scss/partials/_chatayuda.scss
@@ -3,7 +3,7 @@
     justify-content: end;
     margin-right: 20px;
 
-   @include destock{
+   @include desktop{
         margin-top: 20px;
     }
 
@@ -12,7 +12,7 @@
         height: auto;
         margin-bottom: 40px;
         
-       @include destock{
+       @include desktop{
             margin-top: -30px;
             margin-right: 40px;
             
