--- a/scss/partials/_tarjetas.scss
+++ b/scss/partials/_tarjetas.scss
@@ -10,7 +10,7 @@
                 padding-top: 30px;
                 margin-left: 15px;
 
-                @include destock {
+                @include desktop {
                     font-weight: 400;
                     padding-top: 40px;
                 }
@@ -25,7 +25,7 @@
             &-producto {
                 display: block;
 
-                @include destock {
+                @include desktop {
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: space-between;
@@ -37,7 +37,7 @@
 
                 &-imagen {
                     img {
-                        @include destock {
+                        @include desktop {
                             width: 100%;
                             height: 200px;
                         }
@@ -89,7 +89,7 @@
         border-bottom: #3F525A 0.75px solid;
         padding-top: 30px;
 
-        @include destock {
+        @include desktop {
             padding: 30px 0;
 
         }
@@ -123,7 +123,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
 
-            @include destock {
+            @include desktop {
                 font-size: 14px;
                 font-weight: 500;
                 margin-top: 2px;
@@ -160,7 +160,7 @@
                     margin-top: -1px;
                     font-size: 18px;
 
-                    @include destock {
+                    @include desktop {
                         color: #F06B5F;
                         font-weight: 700;
                         margin-top: -1px;
@@ -180,7 +180,7 @@
             margin-top: 10px;
             margin-bottom: 20px;
 
-            @include destock {
+            @include desktop {
                 padding-top: 10px;
                 margin-bottom: 0;
             }
@@ -215,7 +215,7 @@
             width: 100%;
             display: block;
 
-            @include destock {
+            @include desktop {
                 padding-left: 10px;
                 padding-right: 10px;
                 display: flex;
@@ -226,7 +226,7 @@
                     &-icono {
                         display: block;
 
-                        @include destock {
+                        @include desktop {
                             display: flex;
                             align-items: center;
                             justify-content: center;
@@ -237,7 +237,7 @@
                             margin-left: 120px;
                             margin-top: 80px;
 
-                            @include destock {
+                            @include desktop {
                                 position: absolute;
                                 margin-top: 100px;
                                 margin-left: 140px;
@@ -315,7 +315,7 @@
                 padding-top: 30px;
                 margin-left: 15px;
 
-                @include destock {
+                @include desktop {
                     font-weight: 400;
                     padding-top: 40px;
                 }
